base/production/abclang/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: abclang
  namespace: production
spec:
  selector:
    app: abclang
  ports:
    - name: http-cron
      protocol: TCP
      port: 80
      targetPort: 80
