base/production/abclang/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: abclang-web
  namespace: production
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`abclang.tahmid.io`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: abclang
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: abclang-websecure
  namespace: production
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`abclang.tahmid.io`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: abclang
          port: 80
  tls:
    secretName: production-abclang-tls
